# whatlang-rs

./: Cargo.toml  EXPERIMENT.md  Makefile  db.sql
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/whatlang/: Cargo.toml
crates/whatlang/src/: lang.rs
crates/whatlang/src/core/: info.rs
crates/whatlang/src/scripts/: script.rs
src/: main.rs
