[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.0"
once_cell = "1.10.0"
enum-map = { version = "2", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "rustls"]}
async-graphql = { version = "4.0.16", default-features = false }
async-graphql-actix-web = "4.0.16"
env_logger = "0.9.3"
log = "0.4.17"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-native-tls"] }

whatlang = { path = "../whatlang" }
